--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         	<section>
 
 	        	<div class="embed-responsive embed-responsive-16by9">
-              <video id="video" controls>
-                  <source src="C:\Users\leo\Videos\3030   Foda Que Ela É Linda (Acústico).mp4" type="video/mp4">
-              </video>
+	        	<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/bxPMHeJksS0?ecver=1" frameborder="0" allowfullscreen></iframe>
+             <!--  <video id="video" controls>
+                  <source src="https://youtu.be/bxPMHeJksS0" type="video/mp4">
+              </video> -->
 				</div>
 				
              </section>
