--- a/modulo2.html
+++ b/modulo2.html
@@ -38,9 +38,9 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMÁRIO:<br>
             
             <ol>
-              <li>Mudança de base</li>
-              <li>Soma entre as bases</li>
-              <li>Subtração entre as bases</li>
+              <li>Algebra de Bolle</li>
+              <li>circuito</li>
+              <li>Mapa de karnaugh</li>
             </ol>
           </p>
         			
